Autogenerated/Bindings/CppDynamic/lib3mf_types.hpp

typedef int Lib3MF_int32;
typedef int32_t Lib3MF_int32;
  enum class ePersistentReaderSourceType : Lib3MF_int32 {
    Unknown = 0,
    FileOnDisk = 1,
    MemoryBuffer = 2,
    Callback = 3
  };
  enum class eTextureType : Lib3MF_int32 {
    Unknown = 0,
    PNG = 1,
    JPEG = 2
  };
  enum class eToolpathSegmentType : Lib3MF_int32 {
    Unknown = 0,
    Hatch = 1,
    Loop = 2,
    Polyline = 3,
    PointSequence = 4,
    Arc = 5,
    Delay = 6,
    Sync = 7
  };
  enum class eToolpathAttributeType : Lib3MF_int32 {
    Unknown = 0,
    Integer = 1,
    Double = 2
  };
  enum class eToolpathProfileModificationFactor : Lib3MF_int32 {
    Unknown = 0,
    FactorF = 1,
    FactorG = 2,
    FactorH = 3
  };